--- a/styles.css
+++ b/styles.css
@@ -692,3 +692,21 @@ p {
         order: -1;
     }
 }
+
+.members-list {
+    margin: 1.5rem 0;
+}
+
+.members-list li {
+    margin-bottom: 0.75rem;
+    padding-left: 1.5rem;
+    position: relative;
+}
+
+.members-list li::before {
+    content: "•";
+    color: var(--primary-color);
+    font-weight: bold;
+    position: absolute;
+    left: 0;
+}
