--- a/styles.css
+++ b/styles.css
@@ -674,3 +674,18 @@ p {
     position: absolute;
     left: 0;
 }
+
+/* .back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    padding: 10px;
+    background: #333;
+    color: white;
+    border-radius: 50%;
+    text-decoration: none;
+}
+.back-to-top:hover {
+    background: #555;
+} */
